Add the cards to material module and testing them on the home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,14 @@
-<p> Home Page Works!</p>
+<body>
+<!-- The card for the Covid map -->
+<mat-card>Covid Map</mat-card>
+<br/>
+
+<!-- The card for the Covid stats -->
+<mat-card>Covid Stats</mat-card>
+
+</body>
+
+
+
+
+
