Added Covid-19 Spread Maps

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,2 @@
-<p> Home Page Works!</p>
+<iframe id="covidFrame" src="https://ourworldindata.org/grapher/total-cases-covid-19?tab=map" width="70%" height="550px"></iframe>
+<iframe src="https://ourworldindata.org/grapher/total-cases-covid-19?tab=map&region=NorthAmerica" width="70%" height="600px"></iframe>
