--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,13 @@
-<iframe id="covidFrame" src="https://ourworldindata.org/grapher/total-cases-covid-19?tab=map" width="70%" height="550px"></iframe>
-<iframe src="https://ourworldindata.org/grapher/total-cases-covid-19?tab=map&region=NorthAmerica" width="70%" height="600px"></iframe>
+
+<div class="mat-card-cvr">
+<mat-card class="HomepageCards">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Covid-19 Spread</mat-card-title>
+      <mat-card-subtitle>Interactive Map</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+            <iframe src="https://ourworldindata.org/grapher/total-cases-covid-19?tab=map&region=NorthAmerica"></iframe>       
+    </mat-card-content>
+  </mat-card>
+</div>
